--- a/pruebas.html
+++ b/pruebas.html
@@ -16,6 +16,7 @@
     <main id="main-container">
 
     </main>
+    <h1>Functionalidad</h1>
     <script src="pruebasjavascript.js"></script>
 </body>
 
