--- a/pruebas.html
+++ b/pruebas.html
@@ -14,7 +14,7 @@
 
     </header>
     <main id="main-container">
-
+        <h1>Soy el main</h1>
     </main>
     <script src="pruebasjavascript.js"></script>
 </body>
