he creado en la rama main un h2 dentro de body

--- a/pruebas.html
+++ b/pruebas.html
@@ -17,6 +17,7 @@
         <h1>Soy el main</h1>
     </main>
     <h1>Functionalidad</h1>
+    <h2>main2</h2>
     <script src="pruebasjavascript.js"></script>
 </body>
 
