--- a/pruebas.html
+++ b/pruebas.html
@@ -18,6 +18,7 @@
     </main>
     <h1>Functionalidad</h1>
     <h2>main2</h2>
+    <h2>conflicto2</h2>
     <script src="pruebasjavascript.js"></script>
 </body>
 
